// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Snapshot) Track table - empty should render correctly 1`] = `
<DocumentFragment>
  <table
    class="track_table"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
        >
          <span
            class="center_aligned"
          >
            Position
          </span>
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          <span
            class="center_aligned"
          >
            Thumbnail
          </span>
        </th>
        <th
          colspan="1"
          role="columnheader"
        />
        <th
          colspan="1"
          role="columnheader"
        >
          Title
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          Artist
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          Album
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          Length
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          <span
            class="select_header"
          >
            <div
              class="ui fitted checkbox"
              style="cursor: pointer;"
            >
              <input
                class="hidden"
                readonly=""
                tabindex="0"
                title="Toggle All Rows Selected"
                type="checkbox"
                value=""
              />
              <label />
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    />
  </table>
</DocumentFragment>
`;

exports[`(Snapshot) Track table - example data with all rows should render correctly 1`] = `
<DocumentFragment>
  <table
    class="track_table"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
        >
          <span
            class="center_aligned"
          >
            Position
          </span>
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          <span
            class="center_aligned"
          >
            <i
              aria-hidden="true"
              class="image icon"
            />
          </span>
        </th>
        <th
          colspan="1"
          role="columnheader"
        />
        <th
          colspan="1"
          role="columnheader"
        >
          Title
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          Artist
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          Album
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          Length
        </th>
        <th
          colspan="1"
          role="columnheader"
        >
          <span
            class="select_header"
          >
            <div
              class="ui fitted checkbox"
              style="cursor: pointer;"
            >
              <input
                class="hidden"
                readonly=""
                tabindex="0"
                title="Toggle All Rows Selected"
                type="checkbox"
                value=""
              />
              <label />
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          class="position_cell narrow"
          role="cell"
        >
          <button
            class="add_button"
          >
            <i
              aria-hidden="true"
              class="play circle big icon"
            />
          </button>
          <span
            class="value"
          >
            1
          </span>
        </td>
        <td
          class="thumbnail_cell narrow"
          role="cell"
        >
          <img
            class="thumbnail"
            src="https://i.imgur.com/4euOws2.jpg"
          />
        </td>
        <td
          class="favorite_cell narrow"
          role="cell"
        >
          <i
            aria-hidden="true"
            class="heart outline icon"
          />
        </td>
        <td
          class="title_cell"
        >
          <span
            class="title_cell_content"
          >
            <span
              class="title_cell_value"
            >
              Test Title
            </span>
            <span
              class="title_cell_buttons"
            >
              <button
                class="ui basic button nuclear button rounded borderless title_cell_more"
              >
                <i
                  aria-hidden="true"
                  class="ellipsis horizontal icon"
                />
              </button>
            </span>
          </span>
        </td>
        <td
          role="cell"
        >
          Test Artist
        </td>
        <td
          role="cell"
        >
          Test Album
        </td>
        <td
          role="cell"
        >
          1:00
        </td>
        <td
          class="select_cell narrow"
          role="cell"
        >
          <div
            class="ui fitted checkbox"
            style="cursor: pointer;"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              title="Toggle Row Selected"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          class="position_cell narrow"
          role="cell"
        >
          <button
            class="add_button"
          >
            <i
              aria-hidden="true"
              class="play circle big icon"
            />
          </button>
          <span
            class="value"
          >
            2
          </span>
        </td>
        <td
          class="thumbnail_cell narrow"
          role="cell"
        >
          <img
            class="thumbnail"
            src="https://i.imgur.com/4euOws2.jpg"
          />
        </td>
        <td
          class="favorite_cell narrow"
          role="cell"
        >
          <i
            aria-hidden="true"
            class="heart icon"
          />
        </td>
        <td
          class="title_cell"
        >
          <span
            class="title_cell_content"
          >
            <span
              class="title_cell_value"
            >
              Test Title 2
            </span>
            <span
              class="title_cell_buttons"
            >
              <button
                class="ui basic button nuclear button rounded borderless title_cell_more"
              >
                <i
                  aria-hidden="true"
                  class="ellipsis horizontal icon"
                />
              </button>
            </span>
          </span>
        </td>
        <td
          role="cell"
        >
          Test Artist 2
        </td>
        <td
          role="cell"
        >
          Test Album
        </td>
        <td
          role="cell"
        >
          1:00
        </td>
        <td
          class="select_cell narrow"
          role="cell"
        >
          <div
            class="ui fitted checkbox"
            style="cursor: pointer;"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              title="Toggle Row Selected"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          class="position_cell narrow"
          role="cell"
        >
          <button
            class="add_button"
          >
            <i
              aria-hidden="true"
              class="play circle big icon"
            />
          </button>
          <span
            class="value"
          >
            3
          </span>
        </td>
        <td
          class="thumbnail_cell narrow"
          role="cell"
        >
          <img
            class="thumbnail"
            src="https://i.imgur.com/4euOws2.jpg"
          />
        </td>
        <td
          class="favorite_cell narrow"
          role="cell"
        >
          <i
            aria-hidden="true"
            class="heart outline icon"
          />
        </td>
        <td
          class="title_cell"
        >
          <span
            class="title_cell_content"
          >
            <span
              class="title_cell_value"
            >
              Test Title 3
            </span>
            <span
              class="title_cell_buttons"
            >
              <button
                class="ui basic button nuclear button rounded borderless title_cell_more"
              >
                <i
                  aria-hidden="true"
                  class="ellipsis horizontal icon"
                />
              </button>
            </span>
          </span>
        </td>
        <td
          role="cell"
        >
          Test Artist 3
        </td>
        <td
          role="cell"
        >
          Test Album
        </td>
        <td
          role="cell"
        >
          1:00
        </td>
        <td
          class="select_cell narrow"
          role="cell"
        >
          <div
            class="ui fitted checkbox"
            style="cursor: pointer;"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              title="Toggle Row Selected"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
